fix(add-pet-form): fix double scrollbar in react-select dropdown and update option styles

--- a/components/AddPetForm/AddPetForm.module.css
+++ b/components/AddPetForm/AddPetForm.module.css
@@ -293,7 +293,7 @@
   border: 1px solid rgba(38, 38, 38, 0.15);
   border-radius: 15px;
   background-color: #fff;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .selectMenuList {
@@ -301,6 +301,8 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  overflow-y: auto;
+  height: 100%;
 }
 
 .selectOption {
@@ -309,6 +311,11 @@
   line-height: 129%;
   letter-spacing: -0.03em;
   color: rgba(38, 38, 38, 0.6);
+  transition: color 0.3s ease;
+}
+
+.selectOption:hover {
+  color: #f9b020;
 }
 
 .active {
